--- a/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/jta-technology-usage.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/jta-technology-usage.windup.yaml
@@ -1,4 +1,9 @@
 - rules:
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/technology-usage/jta-technology-usage.windup.xml-0
+    tag:
+    - Sustain
+    - Transaction
+    - Java EE
+    - JTA
     when:
     - or: []
