--- a/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/security-technology-usage.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/technology-usage/security-technology-usage.windup.yaml
@@ -1,5 +1,10 @@
 - rules:
   - ruleID: http://github.com/windup/windup-rulesets/tree/master/rules/rules-reviewed/technology-usage/security-technology-usage.windup.xml-0
+    tag:
+    - Sustain
+    - Security
+    - Java EE
+    - Security Realm
     when:
     - or:
       - java.referenced:
